--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="download_result_button">다운로드 버튼!</button>
     </div>
     <div id='dragdropdiv' style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'></div>
-    <div></div>
+    <div id='errordiv'></div>
 </body>
 
 </html>
