--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-    <div>
-        api key: <input id='api_key_input' />
+    <div class="container">
+        <div>
+            api key: <input id='api_key_input' />
 
-        <button id="api_start_button">변환 시작!</button>
-        <button id="download_result_button">다운로드 버튼!</button>
+            <button id="api_start_button">변환 시작!</button>
+            <button id="download_result_button">다운로드 버튼!</button>
+        </div>
+        <div id='dragdropdiv'
+            style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'>
+        </div>
+        <div id='errordiv'></div>
     </div>
-    <div id='dragdropdiv'
-        style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'>
-    </div>
-    <div id='errordiv'></div>
 
     <!-- bootstrap 관련 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
