--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset='UTF-8'>
     <title>JUSO.API를 활용한 주소 변환</title>
-    <script src='jquery.min.js'></script>
-    <script src='search.js'></script>
+    <script src='src/jquery.min.js'></script>
+    <script src='src/search.js'></script>
 </head>
 
 <body>
