add icon in side bar

--- a/index.html
+++ b/index.html
@@ -16,20 +16,17 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" href="#">
-                                <span data-feather="home"></span>
-                                대시보드 <span class="sr-only">(current)</span>
+                                <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> 대시보드
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <span data-feather="file"></span>
-                                파일
+                                <span class="glyphicon glyphicon-open-file" aria-hidden="true"></span> 파일
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <span data-feather="shopping-cart"></span>
-                                작업
+                                <span class="glyphicon glyphicon-play" aria-hidden="true"></span> 작업
                             </a>
                         </li>
                     </ul>
@@ -42,8 +39,7 @@
                     <button id="api_start_button">변환 시작!</button>
                     <button id="download_result_button">다운로드 버튼!</button>
                 </div>
-                <div id='dragdropdiv'
-                    style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'>
+                <div id='dragdropdiv' style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'>
                 </div>
                 <div id='errordiv'></div>
             </main>
