create each page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
                 </div>
             </nav>
             <main role='main' class='col-md-9 ml-sm-auto col-lg-10 px-md-4'>
+                <div id='dashboard_page' class="container-fluid">
+                    <div class='page-header'>
+                        <h1>대시 보드 창</h1>
+                        <p>분석 과정 나중에 추가함</p>
+                    </div>
+                </div>
+                <div id='fileupload_page' class='container-fluid'>
+                    <div class='page-header'>
+                        <h1>파일 관리</h1>
+                    </div>
+                </div>
+                <div id='work_page' class='container-fluid'>
+                    <div class='page-header'>
+                        <h1>변환 관리</h1>
+                    </div>
+                </div>
                 <div>
                     api key: <input id='api_key_input' />
 
