아이콘 제거

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" href="#">
-                                <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> 대시보드
+                                대시보드
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <span class="glyphicon glyphicon-open-file" aria-hidden="true"></span> 파일
+                               파일
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <span class="glyphicon glyphicon-play" aria-hidden="true"></span> 작업
+                                작업
                             </a>
                         </li>
                     </ul>
