consist of file manage page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                             <button id='fileupload_button' type='button' class='btn btn-dark'>업로드</button>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">업로드 파일 리스트
+                            <ul id="upload_file_list"></ul>
+                        </div>
+                        <div class="col">분석 파일 리스트
+                            <ul id="analysis_file_list"></ul>
+                        </div>
+                    </div>
+                    <table id="selected_file_table" class='table'></table>
                 </div>
                 <div id='work_page' class='container-lg'>
                     <div class='page-header'>
