--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
                     <div class='page-header'>
                         <h1>파일 관리</h1>
                     </div>
-                    <div class="row">
-                        <div class="col-auto mr-auto">
-                            <span id="upload_file_name"></span>
+                    <div class="input-group mb-3">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="inputFile" accept=".csv">
+                            <label class="custom-file-label" for="inputFile" aria-describedby="inputFile">파일</label>
                         </div>
-                        <div class="col-auto">
-                            <button id='fileupload_button' type='button' class='btn btn-dark'>업로드</button>
+                        <div class="input-group-append">
+                            <span class="input-group-text" id="inputFile">확인</span>
                         </div>
                     </div>
+                    <table id="selected_file_table" class='table'></table>
                     <div class="row">
                         <div class="col">업로드 파일 리스트
                             <ul id="upload_file_list"></ul>
@@ -58,7 +60,6 @@
                             <ul id="analysis_file_list"></ul>
                         </div>
                     </div>
-                    <table id="selected_file_table" class='table'></table>
                 </div>
                 <div id='work_page' class='container-lg'>
                     <div class='page-header'>
