change confirm as button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <label class="custom-file-label" for="inputFile" aria-describedby="inputFile">파일</label>
                         </div>
                         <div class="input-group-append">
-                            <span class="input-group-text" id="inputFile">확인</span>
+                            <button class="input-group-text" id="acceptFile">확인</button>
                         </div>
                     </div>
                     <table id="selected_file_table" class='table'></table>
