--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <table id="selected_file_table" class='table'></table>
                     <div class="row">
                         <div class="col">업로드 파일 리스트
-                            <ul id="upload_file_list"></ul>
+                            <ul class='list-group' id="upload_file_list"></ul>
                         </div>
                         <div class="col">분석 파일 리스트
-                            <ul id="analysis_file_list"></ul>
+                            <ul id="analysis_file_list" class='list-group'></ul>
                         </div>
                     </div>
                 </div>
