move api key part up

--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
                     <div class='page-header'>
                         <h1>변환 관리</h1>
                     </div>
+                    <div class='input-group'>
+                        <div class='input-group-prepend'>
+                            <span class='input-group-text'>api key</span>
+                        </div>
+                        <input id='api_key_input' class='form-control' />
+                    </div>
                 </div>
                 <div>
-                    api key: <input id='api_key_input' />
-
                     <button id="api_start_button">변환 시작!</button>
                     <button id="download_result_button">다운로드 버튼!</button>
                 </div>
-                <div id='dragdropdiv' style='height:200px; background-color: brown; text-align: center; font-size:x-large; color:white; top:50%'>
-                </div>
-                <div id='errordiv'></div>
             </main>
         </div>
     </div>
