change few button

--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
                     <div class='page-header'>
                         <h1>변환 관리</h1>
                     </div>
+                    <div class='row'>
+                        <div class='col'>
+                            <select class='custom-select'>
+                                <option selected>변환 방법</option>
+                                <option value='도로명으로'>도로명</option>
+                                <option value='주소로'>주소</option>
+                            </select>
+                        </div>
+                        <div class='col'>
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                            주소 값 취득
+                            </label>
+                        </div>
+                    </div>
                     <div class='input-group'>
                         <div class='input-group-prepend'>
                             <span class='input-group-text'>api key</span>
