fix conversion name

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </div>
                     <div class='row'>
                         <div class='col'>
-                            <select class='custom-select'>
+                            <select id='conversionSelector' class='custom-select'>
                                 <option selected>변환 방법</option>
-                                <option value='도로명으로'>도로명</option>
-                                <option value='주소로'>주소</option>
+                                <option value='도로명찾기'>도로명찾기</option>
+                                <option value='주소찾기'>주소찾기</option>
                             </select>
                         </div>
                         <div class='col'>
