--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src='src/search.js'></script>
     <script src='src/file_load.js'></script>
+    <script src='src/conversion.js'></script>
 </body>
 
 </html>
