add search with position

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                             </select>
                         </div>
                         <div class='col'>
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
+                            <input class="form-check-input" type="checkbox" value="" id="positionApiCallCheck">
+                            <label class="form-check-label" for="positionApiCallCheck">
                             위치 값 취득
                             </label>
                         </div>
