modify class and add chart element

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container-lg" ondragstart="event.stopPropagation(); return false;">
         <div class='row'>
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 bg-light">
                 <div class="sidebar-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -32,11 +32,11 @@
                     </ul>
                 </div>
             </nav>
-            <main role='main' class='col-md-9 ml-sm-auto col-lg-10 px-md-4'>
+            <main role='main' class='col-md-9 px-md-4'>
                 <div id='dashboard_page' class="container-lg">
                     <div class='page-header'>
                         <h1>대시 보드 창</h1>
-                        <p>분석 과정 나중에 추가함</p>
+                        <canvas id="chart" width='100' height="100"></canvas>
                     </div>
                 </div>
                 <div id='fileupload_page' class='container-lg'>
