add table view function

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <button class="input-group-text" id="acceptFile">확인</button>
                         </div>
                     </div>
-                    <table id="selected_file_table" class='table'></table>
+                    <div id="selected_file_table" class='table'></div>
                     <div class="row">
                         <div class="col">업로드 파일 리스트
                             <ul class='list-group' id="upload_file_list"></ul>
@@ -60,6 +60,9 @@
                         <div class="col">분석 파일 리스트
                             <ul id="analysis_file_list" class='list-group'></ul>
                         </div>
+                    </div>
+                    <div>
+
                     </div>
                 </div>
                 <div id='work_page' class='container-lg d-none'>
